--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.flutter_native_ad">
+  package="com.example.ga_native_ad">
 
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
