--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_native_ad_example
-description: Demonstrates how to use the flutter_native_ad plugin.
+name: ga_native_ad_example
+description: Demonstrates how to use the ga_native_ad plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -18,9 +18,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_native_ad:
+  ga_native_ad:
     # When depending on this package from a real application you should use:
-    #   flutter_native_ad: ^x.y.z
+    #   ga_native_ad: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
